feat: added key vault JWT signing
Refs: #832 [SIW-4691]
